# Fourier-Neural_Operator-in-CPP

./: CMakeLists.txt  README.md
include/fno/: FFT.hpp  SpectralConv1D.hpp  Types.hpp
src/: FFT.cpp  SpectralConv1D.cpp  main.cpp
